--- a/HTML.exam/broadcast/assets/css/main.css
+++ b/HTML.exam/broadcast/assets/css/main.css
@@ -3865,7 +3865,7 @@
 		-webkit-justify-content: center;
 		-ms-justify-content: center;
 		justify-content: center;
-		background-image: url(../../images/background2.png);
+		background-image: url(../../images/Team_Subeom.png);
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
